fix: image layout break from 600 to 450 px

--- a/coffee-house/scss/abstract/_constants.scss
+++ b/coffee-house/scss/abstract/_constants.scss
@@ -15,6 +15,7 @@ $desktop-width: 1440px;
 $custom-mid-width: 900px;
 $tablet-width: 768px;
 $custom-small-width: 600px;
+$custom-extra-width: 450px;
 $mobile-width: 380px;
 
 // Animations
